Fix: Fixed spacing issue between cards

--- a/src/components/elements/TeamMemberCard/TeamMemberCard.module.css
+++ b/src/components/elements/TeamMemberCard/TeamMemberCard.module.css
@@ -4,12 +4,16 @@
   align-items: center;
   background-color: var(--clr-bg-secondary);
   border-radius: 0.2rem;
-  max-width: 20rem;
+  /* max-width: 22rem; */
   width: 100%;
   height: 32rem;
   transition: var(--transition-fast);
   box-shadow: var(--box-shadow);
   overflow: hidden;
+}
+
+.imageWrapper {
+  width: 100%;
 }
 
 .image {
@@ -18,6 +22,11 @@
   height: 24rem;
   border-bottom: 4px solid var(--clr-accent-primary);
   margin-bottom: 1rem;
+  transition: var(--transition-fast);
+}
+
+.image:hover {
+  opacity: 0.5;
 }
 
 .content {
